# InternHunter

./: .env.example  .gitignore  COMPLETION_MESSAGE.txt  CRAWL_AUDIT.md  Dockerfile  ETL_STRATEGY.md  README.md  ROADMAP.md  deployment.py  docker-compose.yml  job-finder.db  migrate.py  mlflow.db  normalizeNLP.py  pyproject.toml  requirements.txt  test.ipynb  test_output.txt  test_processor.txt  test_processor2.txt
docs/: CONTRIBUTING.md  CURRENT_BEHAVIOR.md  MVP_BACKEND_STATUS.md  MVP_DEMO_SCRIPT.md  MVP_DEMO_WALKTHROUGH.md  README.md  REFACTORING.md  REFACTORING_ROADMAP.md  REFACTORING_STATUS.md  ROADMAP.md  SETUP.md
docs/api/: endpoints.md  errors.md  models.md
docs/architecture/: data_contracts.md  database_schema.md  etl_pipeline.md  module_boundaries.md  overview.md  resume_matching.md  search_architecture.md
docs/development/: ai_workflow.md  code_style.md  logging.md  migrations.md  testing.md
docs/examples/: local_ingestion.md  run_embeddings.md  run_scraper.md  search_examples.md
docs/operations/: configuration.md  deployment.md  monitoring.md  prefect.md  troubleshooting.md
md/: JobFinder_Second_Brain.md  architecture.md  architecture_map.md  etl_map.md  mvp_plan.md
src/: config.py  main.py  run_pipeline.py
src/config/: prompts.yaml  settings.py  settings.yaml
src/configs/: configs.yaml
src/core/: exceptions.py  models.py  utils.py
src/core/models/: __init__.py  (+4 more)
src/crawl/: crawl_config.py  crawl_css.py  test.jsonl
src/database/: database.py
src/etl/: client.py  pipeline.py  test.ipynb
src/flows/: ingestion_flow.py
src/internhunter/: __init__.py
src/preprocess/: job_parser.py  preprocess.py
src/prompt/: prompt.py
src/schema/: schema.py
src/scripts/: api_demo_smoke.py  backfill_embeddings.py  check_db_status.py  migrate_data.py  migrate_db.py  normalizeNLP.py  run_production_v2.py  semantic_search_smoke.py  test_chat.py  upgrade_db.py
src/settings/: settings.py
src/utils/: utils.py
tests/: conftest.py
tests/fixtures/: __init__.py  job_samples.py
(+113 files in other folders)
