[project]
name = "job-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai[all]>=0.8.0",
    "google-genai>=1.61.0",
    "groq>=1.1.1",
    "langdetect>=1.0.9",
    "litellm>=1.81.5",
    "mlflow>=2.14.0",
    "notebook>=7.5.3",
    "pandas<3.0.0",
    "pgvector>=0.4.2",
    "pip>=25.3",
    "playwright>=1.57.0",
    "prefect>=3.6.22",
    "protobuf<5.0.0",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.46",
    "structlog>=25.5.0",
    "tenacity>=9.1.2",
    "unidecode>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
